# geocluster-c

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
src/: arguments.c  arguments.h  cluster.c  cluster.h  common.h  config.c  config.h  convert.c  convert.h  database.c  database.h  file.c  file.h  ini.c  json_convertion.c  json_convertion.h  log.c  log.h  main.c  point.c  point.h  points_array.c  points_array.h  server.c  server.h
